--- a/笔记.md
+++ b/笔记.md
@@ -6,5 +6,5 @@
 
 每一隐藏层的隐藏单元的w的维度都是由上一层的输出决定的
 
-sigmoid事实上比较差，但是如果y∈{0，1}，那sigmoid函数会好（一般在就希望y^大于0小于1的时候使用）
+sigmoid事实上比较差，但是如果y∈{0，1}，那sigmoid函数会好（一般在就希望y^大于0小于1的时候使用），一般不知道使用什么作为激活函数时选择RELU
 
