--- a/笔记.md
+++ b/笔记.md
@@ -18,3 +18,10 @@ np.sum(x,axis=0,keepdims=true)
 #如果np,shape()输出为（n, ）这种形式表示这是个数组不是矩阵
 ```
 
+```python
+A = np.zero(x,y) #初始化A矩阵全部是0
+B = np.one（x,y）#初始化B矩阵全部是1
+A.reshape(x1,y1) #重塑矩阵的状态，注意的是重塑的矩阵的元素数量不变才行
+A.T #这个是矩阵的转置
+```
+
