--- a/笔记.md
+++ b/笔记.md
@@ -8,7 +8,7 @@
 
 sigmoid事实上比较差，但是如果y∈{0，1}，那sigmoid函数会好（一般在就希望y^大于0小于1的时候使用），一般不知道使用什么作为激活函数时选择RELU
 
-神经网络训练的初始的时候随机初始化参数很重要
+神经网络训练的初始的时候随机初始化权重很重要
 
 参数更新的公式（用w来举例）：w=w-αdw     (其中α表示学习率，dw是梯度下降的倒数)
 
