--- a/笔记.md
+++ b/笔记.md
@@ -34,4 +34,4 @@ W=np.random.randn(x,y)*0.01 #随机初始话权重W，很小的随机数
 B=np.zeros(x,y) #B无所谓，不会影响他的平衡性
 ```
 
-
+向前传播（神经网络前进）：得到各个输出，缓存用于反向传播时候的权重更新（导数计算这些做参数更新）
