--- a/笔记.md
+++ b/笔记.md
@@ -39,3 +39,18 @@ B=np.zeros(x,y) #B无所谓，不会影响他的平衡性
 $向前传播（神经网络前进）：得到各个输出，缓存用于反向传播时候的权重更新（导数计算这些做参数更新）
 
 神经元参数更新步骤：在正向传播过程中进行正向传播的函数后缓存值，而后在反向传播中进行反向传播的函数进行权重的更新
+
+$各个参数更新的导函数：
+
+sigmoid:ds=s * (1 - s)-------其中s表示激活函数后的数g(Z)
+
+$归一化行：
+
+首先将需要的行或者整个矩阵进行模运算，模运算前为x，模运算后是||x||；之后进行元素/模运算（x/||x||）；这就是归一化
+
+```python
+def normalizeRows(x):
+    x_norm=np.linalg.norm(x,axis=1,keepdims=True)
+    x=x/x_norm
+    return x
+```
