--- a/笔记.md
+++ b/笔记.md
@@ -54,3 +54,13 @@ def normalizeRows(x):
     x=x/x_norm
     return x
 ```
+
+$softmax函数：可以将这个函数看作一个归一化?
+```python
+def softmax(x):
+    x_exp = np.exp(x)
+    x_sum= np.sum(x_exp,axis=1,keepdims=True)
+    s = x_exp/x_sum
+    return s 
+```
+
