--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -6,6 +6,6 @@ $高方差和高偏差（两种情况会出现同时出现的情况）
 
 解决方法：（选择一种更合适的网络架构可能直接全部解决）
 
-高偏差：一个新的网络或者更大的网络和隐藏层，一些方法，至少可以拟合训练集再说。
+高偏差：一个新的网络或者更大的网络（*）和隐藏层，一些方法，至少可以拟合训练集再说。
 
-高方差：更多数据（最高方法），正则化方法
+高方差：更多数据（最高方法*），正则化方法
