--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -9,3 +9,12 @@ $高方差和高偏差（两种情况会出现同时出现的情况）
 高偏差：一个新的网络或者更大的网络（*）和隐藏层，一些方法，至少可以拟合训练集再说。
 
 高方差：更多数据（最高方法*），正则化方法
+
+$正则化（regularization）：现在更多趋向于L2正则化
+
+L2正则化：J(w,b)=(1/m)*sum(ɻ(yhat,y))+(人/2m)||w||^2---------------------------------这只是一个参数的例子，可以加b啥的。其中||w||=w.T*w，其中（人）是正则化参数（属于超参数），在代码中由于lambda是一个保留字写成lambd就行了
+
+L1:将||w||^2转成||w||
+
+例子：dw更新成：dw=(原先)+(λ/m)*w
+
