--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -18,3 +18,9 @@ L1:将||w||^2转成||w||
 
 例子：dw更新成：dw=(原先)+(λ/m)*w
 
+正则化减少过拟合：解释是λ大的化，W就会减少，Z就会被惩罚导致Z减少，使得激活函数在线性范围内。
+
+$dropout正则化：
+
+随机丢弃一些单元，将他的激活后输出变成0，从而在反向传播中不会进行梯度更新，参数不会改变，不是参数（像是w）变成0，只是不参与反向传播的梯度更新
+
