--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -24,3 +24,10 @@ $dropout正则化：
 
 随机丢弃一些单元，将他的激活后输出变成0，从而在反向传播中不会进行梯度更新，参数不会改变，不是参数（像是w）变成0，只是不参与反向传播的梯度更新
 
+```python
+def dropout_m(X,keep_prob):
+    dropout_mask = np.random.rand(X.shape[0],X.shape[1]) < keep_prob        #生成随机向量，当小于保留概率的时候就是0
+    a=np.multiply(X,dropout_mask)                                           #将单元进行丢弃
+    a/= keep_prob                                                           #缩放回原来的大小，本质这个a其实就是输入X的dropout版本
+    return a
+```
