--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -26,7 +26,7 @@ $dropout正则化：
 
 ```python
 def dropout_m(X,keep_prob):
-    dropout_mask = np.random.rand(X.shape[0],X.shape[1]) < keep_prob        #生成随机向量，当小于保留概率的时候就是0
+    dropout_mask = np.random.rand(X.shape[0],X.shape[1]) < keep_prob        #生成随机向量，当小于保留概率的时候就是0，也可以直接使用*X.shape，其中*是解包操作符
     a=np.multiply(X,dropout_mask)                                           #将单元进行丢弃
     #a/= keep_prob                                                           #缩放回原来的大小，本质这个a其实就是输入X的dropout版本，这个代码不需要缩放，因为随机数组是真假形式
     return a
