--- a/深度学习导读.md
+++ b/深度学习导读.md
@@ -76,7 +76,7 @@ $np的一些用法：
 
 逐项元素相乘np.multiply(A,B)：就是将两个对应的元素进行相乘输出同样维度的矩阵；直接*也可以（相当于）
 
-幂运算np.power(x,num)：左边是一个值，右边是幂函数的数
+幂运算np.power(x,num)：左边是一个值，右边是幂函数的数，还有就是直接**num也是幂函数运算
 
 $参数和超参数（hyperparameters）:
 
