--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -32,11 +32,33 @@ def dropout_m(X,keep_prob):
     return a
 ```
 
-$标准化输入：
+$标准化输入（归一化？）：
 
 假设训练集二维，每个维的值做平均，再将每个相关维度的值除这个值得到标准化输入。
 
 缩放（一般使用方差）：将标准化后的数据（上一步）进行缩放，就是计算这个维度所有值的平方的平均值，再使用标准化后的值除这个平均值。
+
+归一化的好处：加入数据在平面上很挤，不利于学习，当缩放后数据就会分散在更大的平面，使得成本函数更加对称（而不是很窄），减少震荡来找到成本函数最小值
+
+$梯度消失和爆炸：导数和斜率比较小，导致训练困难，随机权重初始化减少问题
+
+例子：假设激活函数后值等于本身在最后一层Y=WWWWWWWX，在L很大的时候，假设W大于1，就会出现指数型增长，Y就会爆炸，小于1就会变得很小，Y就会指数级减少
+
+$权重初始化：
+
+一般做法：随机高斯变量乘以上一个层的单元个数(n)的平方根，这样的W不会比1太多和小太多，有效防止爆炸和消失
+
+```python
+W = np.random.randn(*X.shape)*np.sqrt(1/n)          #RELU一般是2/n
+```
+
+$梯度检验（确保反向传播正确）：
+
+梯度数值的逼近：在导数中使用双边差分会更加逼近这个点的导数，如果使用单边（上三角/下三角）而不是双边的大三角形他的误差会更大（f(x+θ)-f(x-θ)）/2θ
+
+梯度检验：首先将所有的参数重新构造成一个大向量θ，然后将他们的导也重塑一个大向量dθ，计算θ向量的导函数（上面的公式），检查是不是和dθ大致（使用距离：他们差的欧几里得距离的平方除以他们两个分别的欧几里得距离平方的和，结果小于10的-7次方----差不多）
+
+注：1）不用在训练的时候使用，在debug使用检查错误。2）如果出现问题检查相关的组件找到bug（比如dw相差很近，但是db有问题可能是db计算错误有关b的错误）。3）正则化有也要加。4）不要和dropout一起。5）在初始化训练的时候进行，可能再次在训练中某个时间点进行，但是不要一直进行会降低训练速度
 
 
 
