--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -60,7 +60,25 @@ $梯度检验（确保反向传播正确）：
 
 注：1）不用在训练的时候使用，在debug使用检查错误。2）如果出现问题检查相关的组件找到bug（比如dw相差很近，但是db有问题可能是db计算错误有关b的错误）。3）正则化有也要加。4）不要和dropout一起。5）在初始化训练的时候进行，可能再次在训练中某个时间点进行，但是不要一直进行会降低训练速度
 
+$mini-batch梯度下降法：
 
+小批量梯度下降：虽然向量化可以加快计算，但是当数据量很大的时候（几百万级别），将整个输入的大矩阵输入计算依旧很慢
+
+小批量梯度下降：将大数据分成小样本批次：X^{t},Y^{t}
+
+小批量梯度下降训练中成本函数问题：会出现上升下降的震荡趋势，但是总体应该还是下降，因为每次训练都是训练新的小批次。
+
+选择mini批次尺度：1就是随机了，可能会走错方向。
+
+$几种比梯度下降更快的优化算法，下面是相关知识。
+
+$指数加权平均：(在W和b上使用)
+
+V(t)=βV(t-1)+(1-β)θ(t)------------------------其中V(t)是当前前的加权平均值，θ(t)是当前数据，那么可以计算1/(1-β)相当于这几个数据的加权平均，这范围内就会更加平滑
+
+$动量梯度下降法：指数加权平均在W和b上使用
+
+公式：(有缺口)
 
 
 
