--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -72,11 +72,11 @@ $mini-batch梯度下降法：
 
 $几种比梯度下降更快的优化算法，下面是相关知识。
 
-$指数加权平均：(在W和b上使用)
+$指数加权平均：(在dW和db上使用)
 
 V(t)=βV(t-1)+(1-β)θ(t)------------------------其中V(t)是当前前的加权平均值，θ(t)是当前数据，那么可以计算1/(1-β)相当于这几个数据的加权平均，这范围内就会更加平滑
 
-$动量梯度下降法：指数加权平均在W和b上使用
+$动量梯度下降法：指数加权平均在dW和db上使用
 
 公式：(有缺口)
 
