--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -78,7 +78,28 @@ V(t)=βV(t-1)+(1-β)θ(t)------------------------其中V(t)是当前前的加权
 
 $动量梯度下降法：指数加权平均在dW和db上使用
 
-公式：(有缺口)
+公式：v(dW)=βv(dW)+(1-β)dW;v(db)=βv(db)+(1-β)db;W=W-αv(dW);b=b-αv(db)
+
+初始化的时候v(dW)和v(db)初始化为0？
+
+$RMSprop梯度下降：在水平方向上加速（W和b），在竖直方向上变慢（震荡）
+
+导数公式加权：S(dW)=β2S(dW)+(1-β2)(dW)^2--------------------------------dW的2次方后面是,db相同，β2是超参数，与动量的β区别开
+
+更新参数：W=W-α(dW/sqrt(SdW)+ε)-----------------------b相同，其中ε是保证不会除以0的一个超参数
+
+$Adam优化算法：（本质是RMS和动量的结合）自适应
+
+实现：1）初始化V(dW)=0,S(dW)=0,b也是。2）迭代中计算更新动量V和RMS的S。3）修正V和S，V(correction)=V/(1-β^t)，其中t是迭代次数，同理S修正相似。4）更新，W=W-α(V(correction)/sqrt(S(correction))+ε)，b类似
+
+一般的超参数：α需要调整，β1=0.9（这是动量的），β2=0.999，ε=10^(-8)（但是不重要）
+
+$学习率衰减：
+
+
+
+
+
 
 
 
