--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -94,7 +94,11 @@ $Adam优化算法：（本质是RMS和动量的结合）自适应
 
 一般的超参数：α需要调整，β1=0.9（这是动量的），β2=0.999，ε=10^(-8)（但是不重要）
 
-$学习率衰减：
+$学习率衰减：如果学习率很高可能在最后很难达到收敛（使用一般在后面考虑）
+
+$局部最优解问腿：现在的优化算法还有挑战
+
+
 
 
 
