--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -36,7 +36,7 @@ $标准化输入（归一化？）：
 
 假设训练集二维，每个维的值做平均，再将每个相关维度的值除这个值得到标准化输入。
 
-缩放（一般使用方差）：将标准化后的数据（上一步）进行缩放，就是计算这个维度所有值的平方的平均值，再使用标准化后的值除这个平均值。
+缩放（一般使用方差）：将标准化后的数据（上一步）进行缩放，就是计算这个维度所有值的平方的平均值，再使用标准化后的值除这个平均值的开根。
 
 归一化的好处：加入数据在平面上很挤，不利于学习，当缩放后数据就会分散在更大的平面，使得成本函数更加对称（而不是很窄），减少震荡来找到成本函数最小值
 
