Update and rename shangji.md to 后续1.md

--- a/后续1.md
+++ b/后续1.md
@@ -30,20 +30,40 @@
 正则化网络的激活函数：
   归一化z[2]更多（默认）
 
-  批量归一化：
+  批量归一化batch norm（bn）：
   mean=1/m*np.sum(Z)                          #标准化
   var=1/m*((Z-mean)**2)                       #正则化步骤，计算方差
   Znorm=(Z-mean)/(np.sqrt(var+epsilon))       #epsilon方式除以0的参数，归一化训练稳定加速收敛，但是将输入分布标准到正太分布中（均值0方差1）会对神经网络本身的表达能力限制
   Z_tilde = gamma * Znorm + beta             # 重参数化，最终输出，表达能力提升（对上面代码的逆向）
 ```
 
+```python
+将批量归一化拟合进神经网络：
+  一般与小批量数据进行使用，将原来的Z批量化成Ztilde，再计算A
+  在批量归一化中会将b进行平均删除，也就是说b其实相当于没有了
 
+  步骤：
+    网络向前传播，使用Ztilde来替换Z，计算A后；
+    反向传播，计算所有层的dw,db,dbeta,dgamma，使用学习率更新参数
+```
 
+```python
+批量归一化为什么好用：
+  由于将输入特征先归一化成均值为0，方差为1的特征，他们具有相同的取值范围，加速学习。
 
+  批量归一化的作用是将网络层数的参数A这种偏不大，即使在更新但是依旧分布在相同分布中，变化较小，这样每个层数就会比较独立（早期层不能改变太多这样后期层会更容易的学习）
 
+  由于在小批量上实现，所以会引入噪声，但是结果类似DROPOUT，有轻微正则化的意义（但是不要当作相当于）
+```
 
+```python
+测试时候的bach norm：
+  
+```
 
+```python
 
+```
 
 
 
