--- a/后续1.md
+++ b/后续1.md
@@ -62,8 +62,12 @@
 ```
 
 ```python
-SOFTMAX回归：
-  
+SOFTMAX回归：(不仅仅是两个类C)
+  在这种不是只有两种类别的情况上我们的输出单元有C=N个。
+
+  原理：在最后一层的Z后面，激活函数使用这个SOFTMAX激活函数,输出是概率的向量
+  t(i)=exp(Z(i))
+  A=exp(Z)/sum(t(i))
 ```
 
 
