--- a/视觉.md
+++ b/视觉.md
@@ -1,7 +1,13 @@
 ```python
+边缘检测：
+  垂直边缘检测：卷积核使用的是垂直排列的方式，比如左边是1中间是0右边是-1这种（卷积核是3*3大小），可以在图像中找到垂直的线（边缘）
+  注：在RBG中低数值的颜色比较深，高颜色比较亮
 
-  
-  
+  深度学习边缘检测：将卷积核中的数值设定成为参数，并学习这些参数进行边缘检测，相比于手工进行卷积核数值的填写更好实现边缘检测（多角度的边缘检测）
+```
+
+```python
+
 ```
 
 ```python
