--- a/视觉.md
+++ b/视觉.md
@@ -7,9 +7,23 @@
 ```
 
 ```python
+PADDING
+  卷积操作有缺点，在进行操作的时候边缘的信息使用的很少（甚至只有一次），并且如果在深层网络中一直使用卷积操作就会一直将图像缩小。
+  想到的是在周围填充（比如在周围填充一个像素边框全是0，padding=1）
 
+卷积就分成了两种：
+  1.有效卷积：就是没有填充
+  2.相同卷积：填充后输入和输出的特征图大小相同
+
+在计算机视觉中使用奇数的滤波器（卷积核）
 ```
 
 ```python
+卷积步长（strided）：
+  步长就是卷积核移动的距离
+```
 
+```python
+三维卷积：
+  
 ```
