--- a/视觉.md
+++ b/视觉.md
@@ -25,5 +25,28 @@ PADDING
 
 ```python
 三维卷积：
-  
+  例子：现在假设输入图片是RGB三个通道，三维卷积将原先的一维卷积（比如：3*3*1）变成（3*3*3，其中最后的3是通道数量，要和输入的通道数量保持一致）三维卷积核，但是最后的图像输出是二维的（比如4*4*1）。
+
+  卷积过程：每个通道上对应的卷积核和对应输入图像通道上的图像进行卷积操作，然后将他们进行相加得到最后的输出（相当于降维操作）
+
+卷积的符号：
+f：滤波器的尺寸
+p：padding
+s：步长
+```
+
+```python
+卷积层的类型：
+  1.卷积层：CONV
+
+  2.池化层：POOL（没有要学习的参数，梯度下降不变）----------尺寸和大小
+    使用来减小表达的大小，加速计算，使检测到的特征更加稳定
+    最大池化：拿到决定范围中最大的值进行输出
+    平均池化：平均值作为输出
+
+  3.全连接层：FC
+```
+
+```python
+
 ```
