--- a/视觉.md
+++ b/视觉.md
@@ -50,5 +50,28 @@ s：步长
 ```python
 目标检测：
   目标检测是识别和定位的融合，需要的参数有：label（识别的标签），bx(目标定位)，by(定位)，bh(目标高度)，bw(目标的长度)
+
+  识别：使用卷积进行识别
+  定位：使用滑动窗口（相当于一个框在从头进行移动检测）
+
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
