--- a/视觉.md
+++ b/视觉.md
@@ -52,7 +52,7 @@ s：步长
   目标检测是识别和定位的融合，需要的参数有：label（识别的标签），bx(目标定位)，by(定位)，bh(目标高度)，bw(目标的长度)
 
   识别：使用卷积进行识别
-  定位：使用滑动窗口（相当于一个框在从头进行移动检测）
+  定位：使用滑动窗口检测算法（相当于一个框在从头进行移动检测）------------但是计算成本很高，需要使用不一样的窗口大小裁剪输入，但是可以解决
 
 ```
 
