--- a/视觉.md
+++ b/视觉.md
@@ -54,6 +54,7 @@ s：步长
   识别：使用卷积进行识别
   定位：使用滑动窗口检测算法（相当于一个框在从头进行移动检测）------------但是计算成本很高，需要使用不一样的窗口大小裁剪输入，但是可以解决
 
+  当前的滑动窗口：使用整个图，将整个图输出，一个格子卷积的结果相当于一个窗口的输出
 ```
 
 
