--- a/视觉.md
+++ b/视觉.md
@@ -57,6 +57,8 @@ s：步长
   当前的滑动窗口：使用整个图，将整个图输出，相当于把输入网格化，一个格子卷积的结果相当于一个窗口的输出（问题：检测边框的准确问题）
 
   检测边框的准确（YOLO算法）：
+    1.定位：将图像输入分为几个网格，定位相关物体的中心（只看一次，就是即使在另一个网格中有部分，但是也将那边网格的物体检测向量为false）
+    2.框框：设定每个网格的长和宽都是1，所以不是跨网格的物体框框长宽<1。
 ```
 
 
