--- a/视觉.md
+++ b/视觉.md
@@ -61,6 +61,21 @@ s：步长
     2.框框：设定每个网格的长和宽都是1，所以不是跨网格的物体框框长宽<1。
 ```
 
+```python
+非极大值抑制（NMS）：一种确保算法仅检测每个对象一次的方法
+  简单说：就是将重叠的识别框，将概率低的PASS，留下那个最高的
+
+  算法细节：
+    1.首先每个网格进行检测，输出的向量有一个输出的概率（Pc），将小于一定概率的框框丢弃
+    2.循环：拿到概率大的框最为预测，将存在的框尽心计算IoU（并交值），将大于一定值的框丢弃
+```
+
+```python
+锚框（anchor box）：想让一个网格识别多个物体
+  
+  
+```
+
 
 
 
