--- a/视觉.md
+++ b/视觉.md
@@ -60,7 +60,7 @@ s：步长
     1.定位：将图像输入分为几个网格，定位相关物体的中心（只看一次，就是即使在另一个网格中有部分，但是也将那边网格的物体检测向量为false）
     2.框框：设定每个网格的长和宽都是1，所以不是跨网格的物体框框长宽<1。
 
-  YOLO简单概括：分成几个网格，然后由物体中心点所在的网格做输出，框框是网络自己计算出来的，相当于YOLO是分配输出网格任务的算法（自己理解的）
+  YOLO简单概括：分成几个网格，然后由物体中心点所在的网格做输出，框框是网络自己计算出来的，相当于YOLO是分配输出网格任务的算法，作为Pc=true部分（自己理解的）
 ```
 
 ```python
@@ -74,7 +74,12 @@ s：步长
 
 ```python
 锚框（anchor box）：想让一个网格识别多个物体
-  输出的向量更加长
+  输出的向量更加长，使用几个锚框就多几倍向量长度
+  
+```
+
+```python
+YOLO算法（专门）：
   
 ```
 
