--- a/视觉.md
+++ b/视觉.md
@@ -73,9 +73,10 @@ s：步长
 ```
 
 ```python
-锚框（anchor box）：想让一个网格识别多个物体
+锚框（anchor box）：想让一个网格识别多个物体（现在YOLO相当于将它进行调整输出的）
   输出的向量更加长，使用几个锚框就多几倍向量长度
-  
+
+  每个网格有几个锚框神经网络将它中心点，后进行偏移大小调整进行预测（现代YOLO）
 ```
 
 
