--- a/视觉.md
+++ b/视觉.md
@@ -84,10 +84,15 @@ s：步长
   ONE-SHORT LREANING(一次学习)：要解决的问题
     学习相似函数
 
-  
+  三元组损失（TRIPLET）：锚点A，正例P，反例N
+    损失=max（【(||f(A)-f(P)||^2)-(||f(A)-f(N)||^2)+α<=0】，0）
+
+  也有使用二分类进行判断的方法：输入两个图像分别计算得到输出，在将输出进入一个新的网络判断是不是同一个人
 ```
 
+```python
 
+```
 
 
 
