--- a/序列模型.md
+++ b/序列模型.md
@@ -38,13 +38,27 @@ RNN多种架构：（只是例子）
 ```
 
 ```python
-
+双向RNN：BRNN
+  问题：如何判断泰迪是熊还是人名的一部分，使用GRU、LSTM这种也不行，因为依然是单向传播
+  结构：在传统的RNN中添加了向前递归的单元
 ```
 
 ```python
-
+NLP开始标记
 ```
+```python
+词汇表征：
+  问题：在传统的使用单词表向量表示的方法会有问题，如果在对一个单词的联系之间进行计算，由于欧几里得距离全是相同的很难判别
+        如何让相近的东西的单词联系起来可以加速神经网络的学习和计算
 
+  嵌入词表示：
+    将单词嵌入到一个多维度的表示中，相似的单词在距离上是相近的表示相似
+
+  嵌入矩阵：
+    E表示嵌入矩阵（需要梯度下降学习），Oj表示相关单词j的向量表示（就是在某一个位置是1，其他是0），ej表示相关单词j的嵌入向量
+    ej=np.dot(E,Oj)
+    但是在实际中我们不会这样相乘，因为这样的代价很大，实际中使用查找的方法进行点成，因为热向量Oj中只有一个是1，其余全是0
+```
 
 
 
