--- a/序列到序列模型.md
+++ b/序列到序列模型.md
@@ -1,1 +1,48 @@
+```python
+基础模型：
+  构建一个编码器（encode可以是RNN，GRU或者LSTM等），最后编码器输出一个向量代表句子
+  后面接一个解码器，直到最终输出（可能将解码器前一个yhat作为下一个组件的x输入）
+
+图像生成标题：先进入卷积，后卷积的输出到序列模型中进行训练（网络可以通过自己的目的进行合理的组合）
+```
+
+```python
+定向搜索（Beam serch）：
+   参数B：尝试的可能（假如在语言翻译中，尝试第一个词是谁的可能B=3，可能尝试3种最大可能的单词，后面搜索的是单词对的可能不是下一个单词自己的可能）
+
+改进定向搜索：
+  长度归一化：
+    arg max sum(logP(y<t>|x,y<1>,...y<t-1>))                其中t从1到Ty
+
+误差分析：
+  
+```
+
+```python
+
+```
+
+```python
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
