--- a/序列到序列模型.md
+++ b/序列到序列模型.md
@@ -19,8 +19,11 @@
 ```
 
 ```python
-注意力模型：（像是一个RNN输入句子，一个RNN处理句子，这就是注意力模型）
-  
+注意力模型前瞻：（像是一个RNN输入句子，一个RNN处理句子，这就是注意力模型）
+  注意力直观理解：人类在翻译的时候不是开口就来或者看完一整句，而是阅读一部分翻译一部分，因为长难句真的很难
+  现在的问题：在编码器和解码器的工作中，对于短句来说很好，但是对于长句子性能就会下降，因为神经网络很难记住很长的句子，进行解析
+
+注意力模型：
   
 ```
 
