--- a/整体导读.md
+++ b/整体导读.md
@@ -90,7 +90,7 @@ A[L]=g[L](Z[L])--------------最后一层A=Yhat
 
 dZ[L]=A[L]-Y
 
-dW[L]=(1/m)X(dZ[L].T)        --其中X是输入的初始数据
+dW[L]=(1/m)X(dZ[L].T)        --其中X是输入这一层的数据，也是就是上一层输出的A
 
 db[L]=(1/m)np.sum(dZ[L],axis=1,keepdims=True)
 
