--- a/整体导读.md
+++ b/整体导读.md
@@ -78,6 +78,8 @@ $np的一些用法：
 
 幂运算np.power(x,num)：左边是一个值，右边是幂函数的数，还有就是直接**num也是幂函数运算
 
+np.squeeze(x,axis)，用于消除维度为1的矩阵，也就是如果没有axis指定删除，就会将(1,3,1,1)->(3,)，指定只会删除指定的维度上是1的部分axis=0,->(3,1,1)
+
 $参数和超参数（hyperparameters）:
 
 超参数：像是隐藏层（L），隐藏层的隐藏单元个数（n），学习率（α），迭代次数，激活函数等等会影响W和b的；动量，批大小，各种形式的正则化
