--- a/整体导读.md
+++ b/整体导读.md
@@ -94,5 +94,5 @@ dZ[L]=A[L]-Y
 
 dW[L]=(1/m)X(dZ[L].T)        --其中X是输入这一层的数据，也是就是上一层输出的A
 
-db[L]=(1/m)np.sum(dZ[L],axis=1,keepdims=True)
+db[L]=(1/m)np.sum(dZ[L])     ----由于只是一层所以没有,axis=1,keepdims=True
 
