--- a/整体导读.md
+++ b/整体导读.md
@@ -96,3 +96,8 @@ dW[L]=(1/m)X(dZ[L].T)        --其中X是输入这一层的数据，也是就是
 
 db[L]=(1/m)np.sum(dZ[L])     ----由于只是一层所以没有,axis=1,keepdims=True
 
+
+
+```python
+注意：可以是多维度的，分成输入层数和输出隐藏层，输入就是上一层A的向量大小，隐藏层数就是神经元的多少，其中每个神经元的w都会与输入进行计算输出的是1个数，不是一个一个神经元这样的构造只是状态如此
+```
