--- a/整体导读.md
+++ b/整体导读.md
@@ -92,7 +92,7 @@ A[L]=g[L](Z[L])--------------最后一层A=Yhat
 
 dZ[L]=A[L]-Y
 
-dW[L]=(1/m)X(dZ[L].T)        --其中X是输入这一层的数据，也是就是上一层输出的A
+dW[L]=(1/m)np.dot(dZ,X.T)        --其中X是输入这一层的数据，也是就是上一层输出的A
 
 db[L]=(1/m)np.sum(dZ[L])     ----由于只是一层隐藏层所以没有,axis=1,keepdims=True，如果要求输出的隐藏层大于1就要加，因为这是因为每个神经元的b不一样
 
