--- a/机器学习基础.md
+++ b/机器学习基础.md
@@ -80,7 +80,7 @@ $动量梯度下降法：指数加权平均在dW和db上使用
 
 公式：v(dW)=βv(dW)+(1-β)dW;v(db)=βv(db)+(1-β)db;W=W-αv(dW);b=b-αv(db)
 
-初始化的时候v(dW)和v(db)初始化为0？
+初始化的时候v(dW)和v(db)初始化为0？β的取值在0.8到0.999之间
 
 $RMSprop梯度下降：在水平方向上加速（W和b），在竖直方向上变慢（震荡）
 
